Fix the spacing

--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,6 @@ html {
   height: 100%;
 }
 
-*, *::before, *::after {
-}
-
 body {
   padding: 0;
   height: 100%;
@@ -138,26 +135,34 @@ body {
 
 @keyframes change-font {
 
-  0% { font-family: Sen, sans-serif; }
-  25% { font-family: Pacifico, sans-serif;
+  0% {
+    font-family: Sen, sans-serif;
+  }
+
+  25% {
+    font-family: Pacifico, sans-serif;
     padding-top: .6rem;
     line-height: 0rem;
     font-size: 1.25rem;
   }
 
-  50% { font-family: "Homemade Apple", sans-serif;
+  50% {
+    font-family: "Homemade Apple", sans-serif;
     padding-top: .6rem;
     line-height: .5rem;
     font-size: .875rem;
   }
 
-  75% { font-family: Damion, sans-serif;
+  75% {
+    font-family: Damion, sans-serif;
     padding-top: .6rem;
     line-height: 0rem;
     font-size: 1.5rem;
   }
 
-  100% { font-family: Sen, sans-serif; }
+  100% {
+    font-family: Sen, sans-serif;
+  }
 
 }
 
@@ -225,26 +230,33 @@ body {
 
   @keyframes change-font {
 
-    0% { font-family: Sen, sans-serif; }
-    25% { font-family: Pacifico, sans-serif;
+    0% {
+      font-family: Sen, sans-serif;
+    }
+
+    25% {
+      font-family: Pacifico, sans-serif;
       padding-top: .75rem;
       line-height: 0rem;
       font-size: 1.65rem;
     }
 
-    50% { font-family: "Homemade Apple", sans-serif;
+    50% {
+      ont-family: "Homemade Apple", sans-serif;
       padding-top: .85rem;
       line-height: .5rem;
       font-size: 1.25rem;
     }
 
-    75% { font-family: Damion, sans-serif;
+    75% {
+      font-family: Damion, sans-serif;
       padding-top: .775rem;
       line-height: 0rem;
       font-size: 2.125rem;
     }
 
-    100% { font-family: Sen, sans-serif; }
+    100% {
+      font-family: Sen, sans-serif;}
 
   }
 
@@ -277,26 +289,34 @@ body {
 
   @keyframes change-font {
 
-    0% { font-family: Sen, sans-serif; }
-    25% { font-family: Pacifico, sans-serif;
+    0% {
+      font-family: Sen, sans-serif;
+    }
+
+    25% {
+      font-family: Pacifico, sans-serif;
       padding-top: 1rem;
       line-height: 0rem;
       font-size: 2.2rem;
     }
 
-    50% { font-family: "Homemade Apple", sans-serif;
+    50% {
+      font-family: "Homemade Apple", sans-serif;
       padding-top: 1.175rem;
       line-height: .5rem;
       font-size: 1.665rem;
     }
 
-    75% { font-family: Damion, sans-serif;
+    75% {
+      font-family: Damion, sans-serif;
       padding-top: 1rem;
       line-height: 0rem;
       font-size: 2.83rem;
     }
 
-    100% { font-family: Sen, sans-serif; }
+    100% {
+      font-family: Sen, sans-serif;
+    }
 
   }
 
@@ -329,26 +349,34 @@ body {
 
   @keyframes change-font {
 
-    0% { font-family: Sen, sans-serif; }
-    25% { font-family: Pacifico, sans-serif;
+    0% {
+      font-family: Sen, sans-serif;
+    }
+
+    25% {
+      font-family: Pacifico, sans-serif;
       padding-top: 1.1rem;
       line-height: 0rem;
       font-size: 2.25rem;
     }
 
-    50% { font-family: "Homemade Apple", sans-serif;
+    50% {
+      font-family: "Homemade Apple", sans-serif;
       padding-top: 1.25rem;
       line-height: .5rem;
       font-size: 1.75rem;
     }
 
-    75% { font-family: Damion, sans-serif;
+    75% {
+      font-family: Damion, sans-serif;
       padding-top: 1.05rem;
       line-height: 0rem;
       font-size: 2.9rem;
     }
 
-    100% { font-family: Sen, sans-serif; }
+    100% {
+      font-family: Sen, sans-serif;
+    }
 
   }
 
@@ -381,26 +409,34 @@ body {
 
   @keyframes change-font {
 
-    0% {font-family: Sen, sans-serif; }
-    25% { font-family: Pacifico, sans-serif;
+    0% {
+      font-family: Sen, sans-serif;
+    }
+
+    25% {
+      font-family: Pacifico, sans-serif;
       padding-top: 1.1rem;
       line-height: 0rem;
       font-size: 2.25rem;
     }
 
-    50% { font-family: "Homemade Apple", sans-serif;
+    50% {
+      font-family: "Homemade Apple", sans-serif;
       padding-top: 1.25rem;
       line-height: .5rem;
       font-size: 1.75rem;
     }
 
-    75% { font-family: Damion, sans-serif;
+    75% {
+      font-family: Damion, sans-serif;
       padding-top: 1.05rem;
       line-height: 0rem;
       font-size: 2.9rem;
     }
 
-    100% { font-family: Sen, sans-serif; }
+    100% {
+      font-family: Sen, sans-serif;
+    }
 
   }
 
